--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-zuul.routes.carEngine.url=http://carEngine:8081
+spring.application.name=car-gateway
+server.port=8080
+
+zuul.routes.car-engine.path=/car-engine/**
+zuul.routes.car-engine.serviceId=car-engine
 zuul.routes.ui.url=http://carUi:80/app/
 
-ribbon.eureka.enabled=false
-
-server.port=8080
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://registry:8761/eureka}
