Gateway automatically routes the servers from server registry.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=car-gateway
 server.port=8080
 
-zuul.routes.car-engine.path=/car-engine/**
-zuul.routes.car-engine.serviceId=car-engine
 zuul.routes.ui.url=http://carUi:80/app/
 
-eureka.client.service-url.defaultZone=${EUREKA_URI:http://registry:8761/eureka}
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
