--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=car-gateway
 server.port=8080
 
-zuul.routes.ui.url=http://carUi:80/app/
-
-eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+ribbon.ReadTimeout=10000
+ribbon.ConnectionTimeout=10000
+hystrix.command.default.execution.timeout.enabled=false
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://registry:8761/eureka}
