--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.militaru.car-race</groupId>
-    <artifactId>gateway</artifactId>
+    <groupId>com.militaru</groupId>
+    <artifactId>gateway-service</artifactId>
     <version>0.1-SNAPSHOT</version>
 
     <parent>
@@ -18,7 +18,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <docker.image.prefix>militer/car-race</docker.image.prefix>
+        <docker.image.prefix>militer</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -73,7 +73,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.11</version>
                 <configuration>
-                    <imageName>${docker.image.prefix}.${project.artifactId}</imageName>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <dockerDirectory>src/main/docker</dockerDirectory>
                     <resources>
                         <resource>
@@ -105,7 +105,7 @@
                             <goal>push</goal>
                         </goals>
                         <configuration>
-                            <imageName>${docker.image.prefix}.${project.artifactId}:${project.version}</imageName>
+                            <imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</imageName>
                         </configuration>
                     </execution>
                 </executions>
